[package]
name = "musculus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(macos)'.dependencies]
core-foundation = "0.9.3"

[target.'cfg(unix)'.dependencies]
x11 = "2.21.0"
wayland = "0.0.2"
